Fixed spacing issue between tool-cards should be 16px as per specification was 31px before

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -1786,9 +1786,6 @@ ul {
 {
 .tool-card-main-wrapper{
     // width: 100% !important;
-    div[class^="col-"] {
-        padding: 0 15px;
-    }
     .row{
         display:flex;
         flex-wrap: wrap !important;
